--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+<!---------HEADER--------------->
     <header class="page-header">
         <div class="container header-container">
         <nav class="page-navigation">
+<!--------------LOGO------------>
             <a href="./index.html" class="logo-header link">Web<span class="logo-part-dark">Studio</span></a>
+<!------------MOBILE MENU------->
+<!----------NAVIGATION---------->
         <ul class="menu list">
             <li class="menu-item"><a class="menu-link link current" href="./index.html">Studio</a></li>
             <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
@@ -32,15 +36,17 @@
         </div>
     </header>
     <main class="page-content">
+<!-----------HERO------------->
         <section class="hero background">
             <div class="container">
             <h1 class="main-title">Effective Solutions for Your Business</h1>
             <button class="order-button button-hero button" data-modal-open type="button">Order Service</button>
             </div>
         </section> 
+<!-------WORK PRINCIPLES------>
         <section class="work-principles-section section">
             <div class="container">
-            <h2 class="hidden-title" hidden>Work principles</h2>
+            <h2 class="visually-hidden" hidden>Work principles</h2>
                <ul class="work-principles-list list">
                <li class="work-principles-item">
                 <div class="icon-work-principles">
@@ -82,6 +88,7 @@
                 </ul>
             </div>
         </section>
+<!------OUR SERVICES---------->
         <section class="our-services-section section">
             <div class="container">
             <h2 class="our-services-section-title">What are we doing</h2>
@@ -92,6 +99,7 @@
             </ul>
             </div>
         </section>
+<!------OUR---TEAM---------->
         <section class="our-team-section section">
             <div class="container">
             <h2 class="our-team-section-title">Our Team</h2>
@@ -244,6 +252,7 @@
             </ul>
             </div>
         </section>
+<!--------------CUSTOMERS LIST-------------->
             <section class="customers list">
                 <div class="container">
                     <h2 class="title-customers">Customers</h2>
@@ -294,12 +303,14 @@
                 </div>
             </section>
     </main>
+<!-----------FOOTER----------------->
     <footer class="page-footer">
         <div class="container social-icons">
             <div class="footer-logo">
             <a href="./index.html" class="logo-footer link">Web<span class="logo-part-light">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
+<!---------FOOTER-SOCIAL------------>
         <div class="footer-social">
             <p class="footer-social-text">Social media</p>
             <ul class="footer-social-networks">
@@ -333,6 +344,7 @@
                 </li>
             </ul>
         </div>
+<!-------------FOOTER-CONTACT-FORM-------------->
         <div class="footer-contact-form">
             <p class="footer-form-text">Subscribe</p>
             <form class="contact-form">
@@ -349,6 +361,7 @@
         </div>
         </div>
         </footer>
+<!-----------------MODAL-WINDOW------------------------>
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
                 <button class="modal-close-btn" data-modal-close type="button">
