--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,12 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+<!---------HEADER--------------->
     <header class="page-header">
         <div class="container header-container">
         <nav class="page-navigation">
             <a href="./index.html" class="logo-header link">Web<span class="logo-part-dark">Studio</span></a>
+<!----------NAVIGATION---------->
             <ul class="menu list">
                 <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
                 <li class="menu-item"><a class="menu-link link current" href="./portfolio.html">Portfolio</a></li>
@@ -32,6 +34,7 @@
         </div>
     </header>
     <main>
+<!---------FILTER-BUTTON-------->
         <section class="portfolio">
             <div class="container">
             <h1 class=".hidden-title" hidden>Prodacts</h1>
@@ -41,7 +44,8 @@
                 <li class="button-list-item"><button class="filter-button" type="button">App</button></li>
                 <li class="button-list-item"><button class="filter-button" type="button">Design</button></li>
                 <li class="button-list-item"><button class="filter-button" type="button">Marketing</button></li>
-            </ul>               
+            </ul>
+<!------PROJECTS---CARDS-------->               
             <ul class="projects-cards-list list">
             <li class="projects-cards-item">
                 <a class="project-link link" href="">
@@ -129,6 +133,7 @@
             </div>
         </section>
         </main>
+<!-----------FOOTER----------------->
             <footer class="page-footer">
                 <div class="container social-icons">
                     <div class="footer-logo">
@@ -136,6 +141,7 @@
                         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
                             growth solutions.</p>
                     </div>
+<!---------FOOTER-SOCIAL------------>
                     <div class="footer-social">
                         <p class="footer-social-text">Social media</p>
                         <ul class="footer-social-networks">
@@ -169,6 +175,7 @@
                             </li>
                         </ul>
                     </div>
+<!-------------FOOTER-CONTACT-FORM-------------->
                     <div class="footer-contact-form">
                         <p class="footer-form-text">Subscribe</p>
                         <form class="contact-form">
