--- a/portfolio.html
+++ b/portfolio.html
@@ -169,7 +169,7 @@
                             <li class="footer-social-list">
                                 <a href="#" class="footer-social-link">
                                     <svg class="networks" width="24" height="24">
-                                        <use href="./images/icons.svg#icon-linkedin2"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
