--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         </nav>
 <!-----OPEN-BUTTON-MOBILE-MENU------>
         <button type="button" class="mobile-menu-open" openMenuBtn>
-            <svg class="mobile-menu-open__icon" width="32" height="22">
-                <use href="./images/icons.svg#icon-charm_menu-hamburger"></use>
+            <svg class="mobile-menu-open-icon" width="32" height="22">
+                <use href="./images/icons.svg#icon-menu"></use>
             </svg>
         </button>
 <!--------CONTACT------------->
@@ -101,14 +101,14 @@
     </header>
     <main class="page-content">
 <!-----------HERO------------->
-        <section class="hero background">
+        <!-- <section class="hero background">
             <div class="container">
             <h1 class="main-title">Effective Solutions for Your Business</h1>
             <button class="order-button button-hero button" data-modal-open type="button">Order Service</button>
             </div>
-        </section> 
+        </section>  -->
 <!-------WORK PRINCIPLES------>
-        <section class="work-principles-section section">
+        <!-- <section class="work-principles-section section">
             <div class="container">
             <h2 class="visually-hidden" hidden>Work principles</h2>
                <ul class="work-principles-list list">
@@ -151,9 +151,9 @@
                 </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 <!------OUR SERVICES---------->
-        <section class="our-services-section section">
+        <!-- <section class="our-services-section section">
             <div class="container">
             <h2 class="our-services-section-title">What are we doing</h2>
             <ul class="our-services-list list">
@@ -162,9 +162,9 @@
                 <li class="our-services-list-item"><img src="./images/Rectangle74.jpg" alt="ComputerMobile" width="360" height="300"></li>
             </ul>
             </div>
-        </section>
+        </section> -->
 <!------OUR---TEAM---------->
-        <section class="our-team-section section">
+        <!-- <section class="our-team-section section">
             <div class="container">
             <h2 class="our-team-section-title">Our Team</h2>
             <ul class="our-team-list list">
@@ -315,9 +315,9 @@
                 </li>
             </ul>
             </div>
-        </section>
+        </section> -->
 <!--------------CUSTOMERS LIST-------------->
-            <section class="customers list">
+            <!-- <section class="customers list">
                 <div class="container">
                     <h2 class="title-customers">Customers</h2>
                     <ul class="customers-list">
@@ -365,17 +365,17 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
     </main>
 <!-----------FOOTER----------------->
     <footer class="page-footer">
-        <div class="container social-icons">
+        <!-- <div class="container social-icons">
             <div class="footer-logo">
             <a href="./index.html" class="logo-footer link">Web<span class="logo-part-light">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
+        </div> -->
 <!---------FOOTER-SOCIAL------------>
-        <div class="footer-social">
+        <!-- <div class="footer-social">
             <p class="footer-social-text">Social media</p>
             <ul class="footer-social-networks">
                 <li class="footer-social-list">
@@ -407,9 +407,9 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </div> -->
 <!-------------FOOTER-CONTACT-FORM-------------->
-        <div class="footer-contact-form">
+        <!-- <div class="footer-contact-form">
             <p class="footer-form-text">Subscribe</p>
             <form class="contact-form">
                 <label class="cont-form-field">
@@ -424,9 +424,9 @@
             </form>
         </div>
         </div>
-        </footer>
+        </footer> -->
 <!-----------------MODAL-WINDOW------------------------>
-        <div class="backdrop is-hidden" data-modal>
+        <!-- <div class="backdrop is-hidden" data-modal>
             <div class="modal">
                 <button class="modal-close-btn" data-modal-close type="button">
                     <svg class="close-btn-icon" width="8" height="8">
@@ -482,7 +482,7 @@
                     <button type="submit" class="modal-form-submit">Send</button>
                 </form>
             </div>
-        </div>
+        </div>  -->
         <script src="./js/modal.js"></script>
         <script src="./js/mobile-menu.js"></script>
     </body>
