--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+<!-- HEADER -->
     <header class="page-header">
         <div class="container header-container">
             <nav class="page-navigation">
+<!--LOGO  -->
                 <a href="./index.html" class="logo-header link">Web<span class="logo-part-dark">Studio</span></a>
+<!-- NAVIGATION MENU -->
                 <ul class="menu list">
                     <li class="menu-item"><a class="menu-link link current" href="./index.html">Studio</a></li>
                     <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
                     <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
+<!--CONTACTS------>
             <address class="contact-info link">
                 <ul class="contact-info list">
                     <li class="contact-item"><a class="contact-info-item link"
@@ -36,12 +40,14 @@
         </div>
     </header>
     <main class="page-content">
+<!-- HERO -->
         <section class="hero background">
             <div class="container">
                 <h1 class="main-title">Effective Solutions for Your Business</h1>
                 <button class="order-button button-hero button" data-modal-open type="button">Order Service</button>
             </div>
         </section>
+<!-- WORK PRINCIPLES -->
         <section class="work-principles-section section">
             <div class="container">
                 <h2 class="hidden-title" hidden>Work principles</h2>
@@ -90,6 +96,7 @@
                 </ul>
             </div>
         </section>
+<!-- OUR SERVICES -->
         <section class="our-services-section section">
             <div class="container">
                 <h2 class="our-services-section-title">What are we doing</h2>
@@ -103,6 +110,7 @@
                 </ul>
             </div>
         </section>
+<!-- OUR TEAM -->
         <section class="our-team-section section">
             <div class="container">
                 <h2 class="our-team-section-title">Our Team</h2>
@@ -259,6 +267,7 @@
                 </ul>
             </div>
         </section>
+<!-- CUSTOMERS LIST -->
         <section class="customers list">
             <div class="container">
                 <h2 class="title-customers">Customers</h2>
@@ -309,6 +318,7 @@
             </div>
         </section>
     </main>
+<!-- FOOTER -->
     <footer class="page-footer">
         <div class="container social-icons">
             <div class="footer-logo">
@@ -316,6 +326,7 @@
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
                     & growth solutions.</p>
             </div>
+<!-- FOOTER SOCIAL -->
             <div class="footer-social">
                 <p class="footer-social-text">Social media</p>
                 <ul class="footer-social-networks">
@@ -349,6 +360,7 @@
                     </li>
                 </ul>
             </div>
+<!-- FOOTER CONTACT FORM -->
             <div class="footer-contact-form">
                 <p class="footer-form-text">Subscribe</p>
                 <form class="contact-form">
@@ -365,6 +377,7 @@
             </div>
         </div>
     </footer>
+<!-- MODAL WINDOW -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal-close-btn" data-modal-close type="button">
@@ -424,6 +437,7 @@
             </form>
         </div>
     </div>
+<!-- SCRIPTS -->
     <script src="./js/modal.js"></script>
 </body>
 </html>
