--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                             111-11-11</a></li>
                 </ul>
             </address>
+<!--BURGER-->
+    <button type="button" class="menu-toggle js-open-menu" aria-controls="mobile-menu" aria-expanded="false">
+        <svg class="menu-toggle-icon" width="32" height="22">
+            <use href="./images/icons.svg#icon-burger"></use>
+        </svg>
+    </button>
+    </div>
         </div>
     </header>
     <main class="page-content">
@@ -145,7 +152,7 @@
                                 <li class="social-list">
                                     <a href="#" class="social-link">
                                         <svg class="networks" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin2"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -182,7 +189,7 @@
                                 <li class="social-list">
                                     <a href="#" class="social-link">
                                         <svg class="networks" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin2"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -220,7 +227,7 @@
                                 <li class="social-list">
                                     <a href="#" class="social-link">
                                         <svg class="networks" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin2"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -257,7 +264,7 @@
                                 <li class="social-list">
                                     <a href="#" class="social-link">
                                         <svg class="networks" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin2"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -354,7 +361,7 @@
                     <li class="footer-social-list">
                         <a href="#" class="footer-social-link">
                             <svg class="networks" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin2"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
