--- a/index.html
+++ b/index.html
@@ -444,7 +444,59 @@
             </form>
         </div>
     </div>
+<!--Mobile menu-->
+<div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu">
+        <svg class="mob-modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+    </button>
+    <ul class="mob-menu">
+        <li class="mobile-link-items"><a href="./index.html" class="link-mobile link menu-link-current">Studio</a></li>
+        <li class="mobile-link-items"><a href="./portfolio.html" class="link-mobile link">Portfolio</a></li>
+        <li class="mobile-link-items"><a href="" class="link-mobile link ">Contacts</a></li>
+    </ul>
+    <ul class="contacts-list-mobile">
+        <li class="contacts-item">
+            <a class="contact-link current" href="mailto:info@devstudio.com">+11 (000) 111-11-11</a>
+        </li>
+        <li>
+            <a class="contact-link" href="tel:+110001111111">info@devstudio.com</a>
+        </li>
+    </ul>
+    <ul class="mob-social-networks">
+        <li class="footer-social-items">
+            <a href="" class="mobile-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="footer-social-items">
+            <a href="#" class="mobile-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="footer-social-items">
+            <a href="#" class="mobile-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="footer-social-items">
+            <a href="" class="mobile-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+            </a>
+        </li>
+    </ul>
+</div>
 <!-- SCRIPTS -->
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
