--- a/index.html
+++ b/index.html
@@ -458,10 +458,10 @@
     </ul>
     <ul class="contacts-list-mobile">
         <li class="contacts-item">
-            <a class="contact-link current" href="mailto:info@devstudio.com">+11 (000) 111-11-11</a>
+            <a class="contact-link mob-menu-tel current" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
         <li>
-            <a class="contact-link" href="tel:+110001111111">info@devstudio.com</a>
+            <a class="contact-link mob-menu-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
     </ul>
     <ul class="mob-social-networks">
