--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
             <div class="container">
                 <h2 class="our-team-section-title">Our Team</h2>
                 <ul class="our-team-list list">
-                    <li class="our-team-list-item card"><img class="our-team-img" src="./images/MarkGuerrero.jpg"
+                    <li class="our-team-list-item card"><img class="our-team-img" srcset="./images/Team/MarkGuerrero.jpg 1x, ./images/Team/MarkGuerrero@2x.jpg 2x" 
+                        src="./images/Team/MarkGuerrero.jpg"
                             alt="Mark Guerrero Product Designer" width="264" height="260">
                         <div class="our-team-container">
                             <h3 class="our-team-description-title">Mark Guerrero</h3>
@@ -159,7 +160,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="our-team-list-item card"><img class="our-team-img" src="./images/TomFord.jpg"
+                    <li class="our-team-list-item card"><img class="our-team-img" srcset="./images/Team/TomFord.jpg 1x, ./images/Team/TomFord@2x.jpg 2x"
+                         src="./images/TomFord.jpg"
                             alt="Tom Ford Frontend Developer" width="264" height="260">
                         <div class="our-team-container">
                             <h3 class="our-team-description-title">Tom Ford</h3>
@@ -197,7 +199,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="our-team-list-item card"><img class="our-team-img" src="./images/CamilaGarcia.jpg"
+                    <li class="our-team-list-item card"><img class="our-team-img" srcset="./images/Team/CamilaGarcia.jpg 1x, ./images/Team/CamilaGarcia@2x.jpg 2x"
+                         src="./images/CamilaGarcia.jpg"
                             alt="Camila Garcia Marketing" width="264" height="260">
                         <div class="our-team-container">
                             <h3 class="our-team-description-title">Camila Garcia</h3>
@@ -234,7 +237,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="our-team-list-item card"><img class="our-team-img" src="./images/DanielWilson.jpg"
+                    <li class="our-team-list-item card"><img class="our-team-img" srcset="./images/Team/DanielWilson.jpg 1x, ./images/Team/DanielWilson@2x.jpg 2x"
+                        src="./images/DanielWilson.jpg"
                             alt="Daniel Wilson UI Designer" width="264" height="260">
                         <div class="our-team-container">
                             <h3 class="our-team-description-title">Daniel Wilson</h3>
