--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         <div class="modal">
             <button class="modal-close-btn" data-modal-close type="button">
                 <svg class="close-btn-icon" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+                    <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
             <p class="modal-form-text">Leave your contacts and we will call you back</p>
@@ -403,7 +403,7 @@
                     <div class="modal-form-input-wrapper">
                         <input type="text" name="user-name" class="modal-form-input" id="user-name">
                         <svg class="modal-form-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                            <use href="./images/icons.svg#icon-person"></use>
                         </svg>
                     </div>
                 </div>
@@ -413,7 +413,7 @@
                     <div class="modal-form-input-wrapper">
                         <input type="tel" name="user-phone" class="modal-form-input" id="user-phone">
                         <svg class="modal-form-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                            <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
                 </div>
@@ -422,7 +422,7 @@
                     <div class="modal-form-input-wrapper">
                         <input type="email" name="user-email" class="modal-form-input" id="user-email">
                         <svg class="modal-form-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                            <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
                 </div>
@@ -437,7 +437,7 @@
                     <label for="user-privacy" class="modal-form-check-desk">
                         <span class="modal-form-face-span">
                             <svg class="form-check-icon" width="10" height="8">
-                                <use href="./images/icons.svg#icon-Vector"></use>
+                                <use href="./images/icons.svg#icon-vector"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the &nbsp;<a href="" class="privacy-policy">Privacy
