--- a/portfolio.html
+++ b/portfolio.html
@@ -31,13 +31,19 @@
                 <li class="contact-item"><a class="contact-info-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+<!--BURGER-->
+        <button type="button" class="menu-toggle js-open-menu" aria-controls="mobile-menu" aria-expanded="false">
+            <svg class="menu-toggle-icon" width="32" height="22">
+                <use href="./images/icons.svg#icon-burger"></use>
+            </svg>
+        </button>
         </div>
     </header>
     <main>
 <!---------FILTER-BUTTON-------->
         <section class="portfolio">
             <div class="container">
-            <h1 class=".hidden-title" hidden>Prodacts</h1>
+            <h1 class="hidden-title" hidden>Prodacts</h1>
             <ul class="filter-button-list list">
                 <li class="button-list-item"><button class="filter-button" type="button">All</button></li>
                 <li class="button-list-item"><button class="filter-button" type="button">Web Site</button></li>
@@ -49,7 +55,7 @@
             <ul class="projects-cards-list list">
             <li class="projects-cards-item">
                 <a class="project-link link" href="">
-                <div class="overlay-img"><img src="./images/BankingAppInterfaceConcept.jpg" alt="Banking App Interface Concept" width="360" height="300">
+                <div class="overlay-img"><img class="portfolio-img" src="./images/BankingAppInterfaceConcept.jpg" alt="Banking App Interface Concept" width="360" height="300">
                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="project-link-border">
@@ -59,7 +65,7 @@
             </li>
             <li class="projects-cards-item">
                 <a class="project-link link" href=""> 
-                <div class="overlay-img"> <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" height="300">
+                <div class="overlay-img"> <img class="portfolio-img" src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" height="300">
                 <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="project-link-border">
@@ -68,7 +74,7 @@
             </li>
             <li class="projects-cards-item">
                 <a class="project-link link" href="">
-                <div class="overlay-img"> <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" height="300">
+                <div class="overlay-img"> <img class="portfolio-img" src="./images/MeditationApp.jpg" alt="Meditation App" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="project-link-border">
@@ -77,7 +83,7 @@
             </li>
             <li class="projects-cards-item">
                 <a class="project-link link" href="">
-                <div class="overlay-img"> <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" height="300">
+                <div class="overlay-img"> <img class="portfolio-img" src="./images/TaxiService.jpg" alt="Taxi Service" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="project-link-border">
@@ -86,7 +92,7 @@
             </li>
             <li class="projects-cards-item">
                 <a class="project-link link" href="">
-                <div class="overlay-img"> <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" height="300">
+                <div class="overlay-img"> <img class="portfolio-img" src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="project-link-border">
@@ -95,7 +101,7 @@
             </li>
             <li class="projects-cards-item" >
                 <a class="project-link link" href="">
-                <div class="overlay-img"> <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" height="300">
+                <div class="overlay-img"> <img class="portfolio-img" src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="project-link-border">
@@ -104,7 +110,7 @@
             </li>
             <li class="projects-cards-item">
                 <a class="project-link link" href="">
-                <div class="overlay-img"> <img src="./images/InstagramStoriesConcept.jpg" alt="Instagram Stories Concept" width="360" height="300">
+                <div class="overlay-img"> <img class="portfolio-img" src="./images/InstagramStoriesConcept.jpg" alt="Instagram Stories Concept" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="project-link-border">
@@ -113,7 +119,7 @@
             </li>
             <li class="projects-cards-item">
                 <a class="project-link link" href="">
-                <div class="overlay-img"> <img src="./images/OrganicFood.jpg" alt="Organic Food" width="360" height="300">
+                <div class="overlay-img"> <img class="portfolio-img" src="./images/OrganicFood.jpg" alt="Organic Food" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="project-link-border">
@@ -122,7 +128,7 @@
             </li>
             <li class="projects-cards-item">
                 <a class="project-link link" href="">
-                <div class="overlay-img"> <img src="./images/FreshCoffee.jpg" alt="Fresh Coffee" width="360" height="300">
+                <div class="overlay-img"> <img class="portfolio-img" src="./images/FreshCoffee.jpg" alt="Fresh Coffee" width="360" height="300">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="project-link-border">
@@ -192,5 +198,58 @@
                     </div>
                 </div>
             </footer>
+<!--Mobile menu-->
+<div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu">
+        <svg class="mob-modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+    </button>
+    <ul class="mob-menu">
+        <li class="mobile-link-items"><a href="./index.html" class="link-mobile link ">Studio</a></li>
+        <li class="mobile-link-items"><a href="./portfolio.html" class="link-mobile link menu-link-current">Portfolio</a></li>
+        <li class="mobile-link-items"><a href="" class="link-mobile link ">Contacts</a></li>
+    </ul>
+    <ul class="contacts-list-mobile">
+        <li class="contacts-item">
+            <a class="contact-link mob-menu-tel current" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+        <li>
+            <a class="contact-link mob-menu-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+    </ul>
+    <ul class="mob-social-networks">
+        <li class="footer-social-items">
+            <a href="" class="mobile-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="footer-social-items">
+            <a href="#" class="mobile-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="footer-social-items">
+            <a href="#" class="mobile-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="footer-social-items">
+            <a href="" class="mobile-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+            </a>
+        </li>
+    </ul>
+</div>
+<!-- SCRIPTS -->
+<script src="./js/mobile-menu.js"></script>
 </body>
 </html>
