--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
             <div class="container">
                 <h2 class="our-team-section-title">Our Team</h2>
                 <ul class="our-team-list list">
-                    <li class="our-team-list-item card"><img class="our-team-img" srcset="./images/Team/MarkGuerrero.jpg 1x, ./images/Team/MarkGuerrero@2x.jpg 2x" 
+                    <li class="our-team-list-item card">
+                        <img class="our-team-img" srcset="./images/Team/MarkGuerrero.jpg 1x, ./images/Team/MarkGuerrero@2x.jpg 2x" 
                         src="./images/Team/MarkGuerrero.jpg"
                             alt="Mark Guerrero Product Designer" width="264" height="260">
                         <div class="our-team-container">
@@ -375,7 +376,7 @@
             <div class="footer-contact-form">
                 <p class="footer-form-text">Subscribe</p>
                 <form class="contact-form">
-                    <label class="cont-form-field">
+                    <label class="cont-form-field" >
                         <input type="email" class="footer-form-input" placeholder="E-mail" name="user-e-mail">
                     </label>
                     <button type="submit" class="contact-form-btn">
