--- a/index.html
+++ b/index.html
@@ -108,11 +108,14 @@
             <div class="container">
                 <h2 class="our-services-section-title">What are we doing</h2>
                 <ul class="our-services-list list">
-                    <li class="our-services-list-item"><img src="./images/Rectangle71.jpg" alt="Computer" width="360"
+                    <li class="our-services-list-item"><img srcset="./images/Rectangle71.jpg 1x, ./images/Rectangle71@2x.jpg 2x"
+                        src="./images/Rectangle71.jpg" alt="Computer" width="360"
                             height="300"></li>
-                    <li class="our-services-list-item"><img src="./images/Rectangle72.jpg" alt="Mobile" width="360"
+                    <li class="our-services-list-item"><img srcset="./images/Rectangle72.jpg 1x, ./images/Rectangle72@2x.jpg 2x"
+                        src="./images/Rectangle72.jpg" alt="Mobile" width="360"
                             height="300"></li>
-                    <li class="our-services-list-item"><img src="./images/Rectangle74.jpg" alt="ComputerMobile"
+                    <li class="our-services-list-item"><img srcset="./images/Rectangle74.jpg 1x, ./images/Rectangle74@2x.jpg 2x"
+                        src="./images/Rectangle74.jpg" alt="ComputerMobile"
                             width="360" height="300"></li>
                 </ul>
             </div>
